--- a/app/views/forecasts/index.html.erb
+++ b/app/views/forecasts/index.html.erb
@@ -4,17 +4,9 @@
       <h1 class='text-center'>Forecasts</h1>
     </div>
   </div>
-
-  <div class='row'>
-    <div class="col-md-12">
-      <h3 class='text-center'>Actual time: <%= DateTime.now.strftime('%Y/%m/%d %H:%M:%S') %></h3>
-    </div>
-  </div>
   
-  <div class='row'>
-    <% @forecasts.each do |forecast| %>
-      <%= render 'forecast', forecast: forecast %>
-    <% end %>
+  <div class='forecasts'>
+    <%= render 'forecasts', forecasts: @forecasts %>
   </div>
 </div>
 
